my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ETYPE/T_ETYPE-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ETYPE_STRUCT_H
#define T_ETYPE_STRUCT_H

typedef struct etype etype_t;

conf_class_t *_initialize_T_ETYPE(void);


#endif /* not T_ETYPE_STRUCT_H */
